# lowkie-protocol

./: .dockerignore  .env.example  .gitignore  ADDRESSES.md  ARCHITECTURE.md  Anchor.toml  Arcium.toml  CONTRIBUTING.md  LLM_HANDOFF.md  README.md  package.json  render.yaml  tsconfig.json
.github/: copilot-instructions.md
apps/backend/: .env.example  Dockerfile  README.md  package.json  server.ts  tsconfig.json
apps/test-frontend/: .env.example  README.md  package.json  server.ts  tsconfig.json
artifacts/: circuits_hash.txt  docker-compose-arx-env.yml  recovery_node_config_0.toml  recovery_node_config_1.toml  recovery_node_config_2.toml  recovery_node_config_3.toml  recovery_node_config_4.toml  recovery_node_config_5.toml  recovery_node_config_6.toml  recovery_node_config_7.toml
artifacts/localnet/: identity_0.pem  identity_1.pem  node_0.json  node_1.json  node_bls_0.json  node_bls_1.json  node_callback_0.json  node_callback_1.json  node_x25519_0.json  node_x25519_1.json  recovery_node_0.json  recovery_node_1.json  recovery_node_2.json  recovery_node_3.json  recovery_node_4.json  (+13 more)
client/: arciumAccounts.ts  constants.ts  programContext.ts  relayer.ts  runtimeSafety.ts  send.ts  utils.ts
encrypted-ixs/: Cargo.toml  circuits.rs
frontend/: app.js  index.html  styles.css
programs/lowkie_pool/: Cargo.toml
programs/lowkie_pool/src/: lib.rs
scripts/: bootstrap-program.ts  frontend-server.ts  frontendBridgeSecurity.ts  local-validate.ts
tests/: frontendBridgeSecurity.unit.ts  lowkie.ts  relayProtocol.unit.ts  runtimeSafety.unit.ts  utils.unit.ts
(+41 files in other folders)
