[package]
name = "lowkie_pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lowkie_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "arcium-anchor/idl-build"]

[dependencies]
# arcium-anchor 0.9.5 requires anchor-lang ^0.32.1 exactly.
# Do not change these versions — type mismatches break silently.
anchor-lang   = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl    = { version = "0.32.1" }
arcium-anchor = "0.9.5"
arcium-client = { version = "=0.9.5", default-features = false }
sha2          = { version = "0.10", default-features = false }
